<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.game.PlayerEntryFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.smashgameday.model.GameViewModel" />

        <variable
            name="playerEntryFragment"
            type="com.example.smashgameday.ui.game.PlayerEntryFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_player_name"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/player_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/add_player"
                app:layout_constraintTop_toBottomOf="@id/player_name"
                app:layout_constraintStart_toStartOf="@id/player_name"
                app:layout_constraintEnd_toStartOf="@id/delete_player"
                android:onClick="@{() -> playerEntryFragment.createPlayer()}"/>

            <Button
                android:id="@+id/delete_player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:onClick="@{() -> playerEntryFragment.removePlayer()}"
                android:text="@string/delete_player"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/add_player"
                app:layout_constraintStart_toEndOf="@id/add_player"/>


            <Button
                android:id="@+id/start_game_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/start_game_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_player"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="@{() -> playerEntryFragment.startGameDay()}"/>

            <TextView
                android:id="@+id/player_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="8"
                app:layout_constraintTop_toBottomOf="@id/start_game_day"
                app:layout_constraintStart_toStartOf="@id/add_player"
                android:layout_marginTop="8dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:text="@{viewModel.playerNamesDisplay}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
